--- a/index.html
+++ b/index.html
@@ -1,5 +1,19 @@
 <!doctype html>
 <html lang="ko">
-<title>test website</title>
-<h1>Hello, World!</h1>
-  <h2>HTML 별거 아니네 ㅋㅋ</h2>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>웹사이트 템플릿</title>
+  </head>
+  <body>
+    <h1>제목1</h1>
+    <h2>제목2</h2>
+    <h3>제목3</h3>
+    <h4>제목4</h4>
+    <h5>제목5</h5>
+    <p>본문<br>br은 줄바꿈</p>
+    <a href="https://imonple.kro.kr">링크</a>
+    <a href="https://imonple.kro.kr" target="_blank">새탭으로 링크</a>
+    <a href="https://imonple.kro.kr" target="_blank" title="타이틀">타이틀+새탭으로 링크</a>
+  </body>
+</html>
